performance changes, use ArrayList instead of LinkedList, reduce use of iterators.  saves 5%